# evoforge

./: Cargo.toml  README.md
docs/: IMPLEMENTATION_PLAN.md  LEXICAL_GENOME_USECASES.md  NUMERIC_GENOME_USECASES.md
evoforge-grammar/: Cargo.toml  README.md
evoforge-grammar/examples/: evolve_faber.rs  evolve_toy.rs
evoforge-grammar/src/: codon.rs  decode.rs  engine.rs  grammar.rs  lib.rs  target.rs
evoforge-grammar/src/targets/: archimedes.rs  mod.rs
evoforge-grammar/tests/: archimedes.rs  decode.rs  engine.rs
examples/: golden_sphere.rs
src/: engine.rs  genome.rs  lexical.rs  lib.rs  operators.rs  schema.rs
tests/: golden.rs  json_roundtrip.rs  lexical_usecases.rs  numeric_usecases.rs  production_readiness.rs
tests/fixtures/: sphere_seed_42_snapshot.json
