[package]
name = "evoforge"
version = "0.1.0"
edition = "2021"
authors = ["EvoForge contributors"]
description = "Rust-native evolutionary optimization toolkit"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[lib]
name = "evoforge"
path = "src/lib.rs"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
approx = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

