[package]
name = "evoforge-grammar"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Grammar-guided GP (Grammatical Evolution) layer on top of evoforge"
rust-version = "1.75"

[dependencies]
evoforge = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "serde"] }

# Detach from the parent `evoforge` package dir so this is its own workspace root.
[workspace]
